--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body class="site-body">
+<body class="site-body  site-body__home ">
 
   <header class="site-header header">
   </header>
   <main class="site-main">
     <section class="hero">
+      <div class="container">
+
+      </div>
     </section>
 
   </main>
