--- a/portfolio.html
+++ b/portfolio.html
@@ -5,64 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
-  <link rel="stylesheet"
-    href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css">
-  <link rel="stylesheet"
-    href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.theme.default.min.css">
+  <title>Agency || Portfolio</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
-<body class="site-body  site-body__home ">
+<body class="site-body site-body__portfolio">
 
-  <header class="site-header header">
-  </header>
   <main class="site-main">
-    <section class="hero">
-      <div class="container">
-      </div>
-    </section>
-    <!-- <section class="haqida">
-      <div class="container">
-        <div class="haqida-wrapper">
-          <div class="haqida-wrapper__title">
-            <h2 class="haqida-wrapper__title-text">Kompaniya haqida</h2>
-            <p>Agentlik-bu mijozlarga o'z bizneslari uchun sifatli va innovatsion echimlarni taqdim etish maqsadida
-              tashkil etilgan veb-agentlik. Bizning jamoamiz mijozlarga moslashtirilgan va sifatli mahsulotni taklif
-              qilish uchun yaqin hamkorlikda ishlaydigan tajribali veb-dizayn, ishlab chiqish va marketing
-              mutaxassislaridan iborat.
-              <br>
-              Biz veb-dizayn, veb-sayt va mobil ilovalarni ishlab chiqish, SEO optimallashtirish, kontent yaratish va
-              reklama kampaniyalarini o'z ichiga olgan keng ko'lamli xizmatlarni taklif etamiz. Biz eng yangi
-              texnologiyalar va innovatsion usullardan foydalangan holda brendni rivojlantirish va sotishni ko'paytirish
-              bilan shug'ullanamiz.
-            </p>
-          </div>
-          <ol>
-            <li>
-              <h3>20+</h3>
-              <p>Проектов запустил</p>
-            </li>
-
-            <li>
-              <h3>12+</h3>
-              <p>Профессионалов</p>
-            </li>
-
-            <li>
-              <h3>4 года</h3>
-              <p>Опыта разработки</p>
-            </li>
-
-            <li>
-              <h3>4 года</h3>
-              <p>Опыта разработки</p>
-            </li>
-          </ol>
-        </div>
-      </div>
-    </section> -->
-    <section class="projects">
+    <section class="projects projects--portfolio">
       <div class="container">
         <div class="projects__box">
           <h2 class="projects__title">Bajargan loyihalarimiz</h2>
@@ -87,8 +37,7 @@
           <ul class="panel__list panel__list--active" id="all">
             <li class="panel__item panel__mb1">
               <a href="https://www.instagram.com/uymakon/" target="blank">
-                <a href="https://www.instagram.com/uymakon/" target="blank">
-                </a>
+
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
@@ -113,6 +62,36 @@
               </a>
             </li>
             <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__smm1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
@@ -144,6 +123,36 @@
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
+            <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            <li class="panel__item panel__smm1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
             <li class="panel__item panel__vs2">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
@@ -171,6 +180,22 @@
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
             <li class="panel__item panel__vs1">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
@@ -181,13 +206,61 @@
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
           </ul>
           <ul class="panel__list " id="smm">
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
+            <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
             <li class="panel__item panel__smm1">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
             <li class="panel__item panel__smm2">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
@@ -209,7 +282,22 @@
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
 
+            <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+
+            <li class="panel__item panel__vs2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
             <li class="panel__item panel__mb2">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
@@ -237,6 +325,7 @@
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
+            </li>
             <li class="panel__item panel__mb2">
               <a href="https://www.instagram.com/uymakon/" target="blank">
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
@@ -248,135 +337,44 @@
                 <span class="panel__effect">UYMAKON mobil ilovasi</span>
               </a>
             </li>
-
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__smm1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__smm2">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__vs1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__smm1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
+            </li>
+            <li class="panel__item panel__mb1">
+              <a href="https://www.instagram.com/uymakon/" target="blank">
+                <span class="panel__effect">UYMAKON mobil ilovasi</span>
+              </a>
             </li>
           </ul>
 
-          <a class="project__see-link" href="./portfolio.html">
-            <img src="./images/allSee.svg" width="174" height="70" alt="See all projects">
-          </a>
-
         </div>
       </div>
 
-    </section>
-    <section class="discussion">
-      <div class="container">
-        <div class="discussion__box">
-          <form class="discussion__form form" action="https://echo.htmlacademy.ru/courses" method="POST">
-            <div class="discussion__left">
-              <h2 class="discussion__title">Sizni bir finjon qahva ustida loyihangizni batafsil muhokama qilishga
-                mamnuniyat ila taklif qilamiz.</h2>
-              <input class="form__input" type="text" name="first_name" placeholder="Ismingiz" required>
-              <input class="form__input" type="tel" name="phone" placeholder="Telefon raqamingiz" required>
-              <input class="form__input" type="text" name="idea" placeholder="G'oyangiz xaqida qisqacha (Muhim emas)">
-              <h3 class="services-title">Qanday xizmatlardan foydalanishni xoxlaysiz?</h3>
-              <div class="form__wrap">
-
-                <div class="form__left">
-                  <label class="form__label">
-                    <input type="checkbox" name="backend">
-                    Backend
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="crm">
-                    CRM ishlab chiqish
-                  </label>
-                  <div class="label-box">
-                    <input type="checkbox" name="online_shop" id="online-shop">
-                    <label class="form__label" for="online-shop">
-                      Internet magazin ishlab chiqish
-                    </label>
-                  </div>
-
-                  <label class="form__label">
-                    <input type="checkbox" name="logotip">
-                    Logotip va Brandbook
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="portal">
-                    Portal ishlab chiqish
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="web_design">
-                    Veb dizayn
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="mobilograf">
-                    Mobilograf
-                  </label>
-                </div>
-                <div class="form__right">
-                  <label class="form__label">
-                    <input type="checkbox" name="Frontend">
-                    Frontend
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="grafic_design">
-                    Grafik dizayn
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="motion_design">
-                    Motion dizayn
-                  </label>
-                  <div class="label-box">
-                    <input type="checkbox" name="online_shop" id="online-shop">
-                    <label class="form__label" for="online-shop">
-                      Mobil ilova ishlab chiqish
-                    </label>
-                  </div>
-
-                  <label class="form__label">
-                    <input type="checkbox" name="web_site">
-                    Veb sayt ishlab chiqish
-                  </label>
-                  <label class="form__label">
-                    <input type="checkbox" name="smm_design">
-                    SMM dizayn
-                  </label>
-                </div>
-              </div>
-            </div>
-            <div class="discussion__right choice">
-              <div class="choice__wrap">
-                <h3 class="choice__title">NIMANI MA'QUL KO'RASIZ?</h3>
-                <ul class="choice__list">
-                  <li class="choice__item">
-                    <img class="choice__img" src="./images/achchiqcofe.png"
-                      srcset="./images/achchiqcofe.png 1x, ./images/achchiqcofe2x.png 2x" alt="Achchiq kofe">
-                    <p class="choice__text">Achchiq kofe</p>
-                  </li>
-                  <li class="choice__item">
-                    <img class="choice__img" src="./images/sutlicofe.png"
-                      srcset="./images/sutlicofe.png 1x, ./images/sutlicofe2x.png 2x" alt="Sutli kofe">
-                    <p class="choice__text">Sutli kofe</p>
-                  </li>
-                  <li class="choice__item">
-                    <img class="choice__img" src="./images/suv.png" srcset="./images/suv.png 1x, ./images/suv2x.png 2x"
-                      alt="Suv">
-                    <p class="choice__text">Suv</p>
-                  </li>
-                  <li class="choice__item">
-                    <img class="choice__img" src="./images/choy.png"
-                      srcset="./images/choy.png 1x, ./images/choy2x.png 2x" alt="Choy">
-                    <p class="choice__text">Choy</p>
-                  </li>
-                </ul>
-              </div>
-              <div class="discussion__btn-box"></div>
-              <button class="discussion__btn" type="submit">Mijoz bo’lish </button>
-          </form>
-        </div>
-      </div>
     </section>
   </main>
-  <footer class="site-footer">
 
-  </footer>
-
-
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/vendors/jquery.min.js"></script>
-  <script src="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/owl.carousel.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
